Bug 345095: FAYT doesn't search for pasted strings properly ('findfast only search for the first character if searchstring is copied...').  Patch by pkasting@google.com, r=masayuki